--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -1,10 +1,13 @@
 body
-    #interpreter
+    #content
         :width 800px
-        :height 400px
-        :resize none
-        :background-color black
-        :color #0F0
-        :border none
-    #initial
-        :display none
+        :margin 0 auto
+        #interpreter
+            :width 760px
+            :height 400px
+            :resize none
+            :background-color black
+            :border none
+            :margin 0 auto
+        #initial
+            :display none
